--- a/src/pages/EditorPage/ui/EditorPage.scss
+++ b/src/pages/EditorPage/ui/EditorPage.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    min-height: fit-content;
   }
 
   .editorPage__view {
@@ -19,5 +20,6 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    min-height: fit-content;
   }
 }
